<resources>
    <string name="app_name">NevadaOdyssey</string>

    //Used on activity_login.xml
    <string name="app_icon">App icon</string>
    <string name="mini_games">Mini Games</string>
    <string name="login">Enter user name</string>
    <string name="user_name">Username</string>
    <string name="button_login">Log in</string>

    //Used on home_login.xml
    <string name="choose_mini_games">Choose a game</string>
    <string name="content_image_blackjack">Blackjack mini game image button</string>
    <string name="content_image_dice">Poker dice mini game image button</string>
    <string name="content_image_slot_machine">Slot machine mini game image button</string>
    <string name="content_image_roulette">Roulette mini game image button</string>

    //Used on activity_black_jack.xml
    <string name="hit_button">HIT</string>
    <string name="stand_button">STAND</string>
    <string name="double_button">DOUBLE</string>
    <string name="reset_button">RESET</string>

    //Used on activity_slotmachine.xml
    <string name="money_slotmachine">1000</string>

    //Used on activity_dice.xml
    <string name="button_bet">BET</string>
    <string name="button_lie">LIE!</string>
    <string name="textViewFace">Face chosen</string>
    <string name="textViewAmount">Number</string>
    <string name="incorrect_bet">Incorrect bet value</string>
    <string name="shake_dice">Shake your phone to begin playing</string>
    <string name="truth">Shake your phone to play</string>
    <string name="lie">Shake your phone to play</string>

    //Used on activity_roulette.xml
    <string name="spin">SPIN</string>
    <string name="black_bet">Black</string>
    <string name="red_bet">Red</string>
    <string name="wheel_pointer">Wheel pointer, select correct value</string>
    <string name="wheel_image">Wheel image</string>
    <string name="wheel_bet">Bet</string>
    <string name="bet_a_number">Bet a number</string>
    <string name="string_0">0</string>
    <string name="place_bet">Place a bet</string>
    <string name="button_continue">Continue</string>

</resources>
